--- a/VRChat/86/1263986.html
+++ b/VRChat/86/1263986.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7r2uPB5buUvSko1fEQMOGFfmJFvzk2Pf8q8BSHU6DNg="></script>
+    "ZG7GGNAmvZTntwhpxvLyTFtqoP9k3ZjZr61zCOwGnNQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat対応]テテラゴノス[Voxelモデル]","description":"2020/10/3\n利用規約の改定を行いました。\n新たな利用規約の効力発生日は2020/10/4です。\n利用規約の主な変更点(利用規約の運用については大きな変更はありません)。\n・利用規約の体裁を調整。\n・利用規約の正本が記載されたURLの変更。\nテテラゴノスのファイルバージョンを200にアップデートしました\n・tetragonos200～と名前の付くファイル群がバージョンアップ後のものです\n・旧バージョンのデータも残っています\n\n2020/10/3\nThe Terms of Service have been revised.\nThe effective date of the new Terms of Service is October 4, 2020.\nMajor changes to the Terms of Service (there are no major changes in the operation of the Terms of Service).\nThe text of the Terms of Service has been adjusted.\nChanged URL containing the original copy of the Terms of Service.\nUpdated the file version of Tetragonos to 200\nThe files named \"tetragonos200~\" are the ones after the upgrade.\nOld version data is still available.\n\n※現在バージョンアップ作業中です。バージョンアップの前後で価格の変更の予定はありません。規約については多少の改定が出る予定です(実用上の変更はありません)\n\n・古代ギリシア人男性モチーフのVoxelヒューマノイドモデルが遂に登場！\n・彫りの深い顔、角ばった体つき、コミカルなリップシンクをご堪能下さい\n\n・リップシンク対応\n・アイトラッキング搭載\n・△29250ポリ\n・皮膚や髪の毛、衣類など細かなマテリアル分け\n・VRChatへすぐアップロードできるsceneとprefab付き\n\n・下記の規約をお読みの上ご購入を願います\n・Unity用shader KKshader-Lit-simple が付属しています\n・KKshader-Lit-simpleについては次のURLからご確認ください\n  https://karasuma-kuro.booth.pm/items/1146743","url":"https://booth.pm/ja/items/1263986","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/6c72616e-1bae-4cce-bcc9-c341106fcced/i/1263986/6f670884-04de-42b8-9325-03801a30fce5_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7r2uPB5buUvSko1fEQMOGFfmJFvzk2Pf8q8BSHU6DNg="></script>
+    nonce="ZG7GGNAmvZTntwhpxvLyTFtqoP9k3ZjZr61zCOwGnNQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -144,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +157,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -199,7 +199,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263986/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
@@ -214,14 +214,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263986/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
