--- a/VRChat/47/1223947.html
+++ b/VRChat/47/1223947.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VdIWpBiBbE6K6uj0CWhNHkp9Crjy1trzL+RMApg4X2w="></script>
+    "6RfwJVk9BjtkcnAHDYAB9EQC7gAWdVUUe+VFZCc2LQE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ポシェット『portaordini』 - KBNY　△1150","description":"――　お知らせ　――\n3/9 fix　一部ブレンドシェイプの不具合を修正しました\n　　update　ブレンドシェイプを増やし調整しやすくしました\n――――――――――\n\nバッグブランド\"KBNY\"より新作ポシェット『portaordini』の入荷です！\n△1150なので扱いやすいポリゴン数となっております。\n\n3月8,9,10日に開催しておりましたバーチャルマーケット2のis3ブース展示アイテムの1つです！\n\n『あの人に届ける想いとあの人との思いででこのポシェットはいっぱいなの』\n\n\nデータ内には\nportaordini_L.fbx(ポシェット本体)\nportaordini_R.fbx(左右差分)\nportaordini.unitypackage\nreadme.txt\ntextureフォルダ\n　┗Albedo,Metallic,Normalテクスチャ(全て512*512)\n\nが含まれております。\n使用前にreadme.txtをお読みくださいますようお願いします。\n\n\n※\n\n・著作権について\n１）当ショップの商品(以下アイテム)の著作権はImmature Sheep Select Shop代表、雛羊にあります。\n\n２）当ショップのアイテムの使用について\n　ア　ゲーム内への組み込み使用及び、その他3D作品(3Dを用いた2D作品含む)への組み込みは自由に利用できます。\n　イ　法律及び条令、その他公的良俗に反する使用を禁じます。\n　ウ　商用、非商用問わず本データを他人がダウンロードできるようにすることを禁じます。\n　エ　その他、当ショップが不適切な使用と判断した際には利用の停止を求める場合があります。\n\n\n・免責事項\n１）アイテムの使用に伴う損害については、当ショップでは一切の責を負いません。\n\n２）当ショップでは使用方法等に関するサポートは行っておりません。\n\n３）当ショップ内アイテムは予告なしに内容を変更または削除する場合があります。\n\n\nImmature Sheep Select Shop\n雛羊\n　Twitter:@suyofuwa","url":"https://booth.pm/ja/items/1223947","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/013f360b-9e6b-4ab6-813d-0e93f9b046db/i/1223947/00b53d02-8ba1-498d-803e-d61d6deb9149_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VdIWpBiBbE6K6uj0CWhNHkp9Crjy1trzL+RMApg4X2w="></script>
+    nonce="6RfwJVk9BjtkcnAHDYAB9EQC7gAWdVUUe+VFZCc2LQE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -179,7 +179,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1223947/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
@@ -194,14 +194,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1223947/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
