--- a/VRChat/90/1263490.html
+++ b/VRChat/90/1263490.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/prGj0zaBTi1FOq5jCWUzDZuj0pNmsEg3n/LUBA0Q+8="></script>
+    "C0K/PHl1pG62a3IQuHt6mvsZniwicgJGoGNT4QiddBs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"たぬき【獣型3Dアバター】※Oculus Quest対応","description":"愛らしい表情とだらしないモーションを思う存分堪能してください。\nポリゴン数：6,584(アクセサリ類込み)\n \nYou can enjoy adorable expressions and sloppy motions.\nPolygon count:6,584(including accessories)","url":"https://booth.pm/ja/items/1263490","offers":{"priceCurrency":"JPY","@type":"Offer","price":"292"},"image":"https://booth.pximg.net/c/620x620/cf33cb75-8d81-4e28-a425-e7617a50d1e4/i/1263490/50498676-ec95-4dbe-b93f-6b4ece17964a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/prGj0zaBTi1FOq5jCWUzDZuj0pNmsEg3n/LUBA0Q+8="></script>
+    nonce="C0K/PHl1pG62a3IQuHt6mvsZniwicgJGoGNT4QiddBs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263490/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263490/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               86
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
