--- a/VRChat/71/1264571.html
+++ b/VRChat/71/1264571.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0LmcRGupMY6J2o3E8rg/WfEFjAvhFA+yBqAGmQOkK7Q="></script>
+    "IcwdL/PByam7lu6PudxqDortM7J3zirFMpLc0qXNYfw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"悪魔のルル","description":"オリジナル３Dモデル【悪魔のルル-Devilulu-】\n\n悪魔をイメージした男性キャラクターです。悪魔のイメージとはかけ離れた爽やかな表情を実装しています。実はコスプレです。\n\n\n\n本モデルはVRchatでの利用を想定したunityのHumanoid形式に対応した3Dモデルデータです。\n※モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。","url":"https://booth.pm/ja/items/1264571","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/e026e1bb-6a1f-4da1-864b-daca3106d9ef/i/1264571/a7659fc9-910d-409e-a16b-600c03af5d4b_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0LmcRGupMY6J2o3E8rg/WfEFjAvhFA+yBqAGmQOkK7Q="></script>
+    nonce="IcwdL/PByam7lu6PudxqDortM7J3zirFMpLc0qXNYfw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -171,7 +171,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264571/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               358
@@ -186,14 +186,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264571/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               358
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
