--- a/VRChat/28/1264528.html
+++ b/VRChat/28/1264528.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "c4rUWBjy4doZ04mYF6ek8oY1aQ9hahkpopHwXNBsN4E="></script>
+    "+48T/Fjp8LzijOZLbno0yCGDFrnMVreBXuERZLYPERE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『木葉天狗娘』","description":"オリジナル3Dモデル『木葉天狗娘ver1.00』紹介文\n\nVRChatでの利用を想定したHumanoid形式の3Dモデルです。\n\n・三角ポリゴン数:19,022ポリゴン\n・リップシンク：15種+5種（あ、い、う、え、おの母音）\n・サンプルアニメーション:6種\n\n---------------------------------------------------------\n●内容物\n\n・wolf_teng_ver.1.00.fbx\n全てのパーツが一つのオブジェクトに合成されたモデルデータです。\n\n・Texture\npingファイルが4枚とnormalmap画像2枚\n\n\nWolf_Teng.unitypackage\nセットアップされたモデルデータが入っているunitypackageファイルです。\n\n●導入方法\n1. Unity 2017.4.15f1で空のUnityプロジェクトを作成してください\n\n2. VRCSDKをインポートしてください\n\n3.Wolf_Teng.unitypackageをダブルクリックしてインポートしてください\n\n4.インポートが完了したらWolf_Teng/Prefabs/WolfTengをhierarchyに展開してください。\n\n利用規約\n\n当モデルデータをいずれかの形で利用された場合、本利用規約に同意したものとします。\n\n・商業利用について\n当モデルは主にVRChatでの利用を想定しています。\n当モデル及び改造モデルを使用したゲーム、アニメーション、アプリでの利用は可能です。\n同様に、動画配信等の営利（金銭が発生する）活動における利用も可能です。\n\n・モデルの改変について\n当モデルに関するデータの改変は自由です。\n\n\n・著作権について\n当モデル及び改変データの持つ著作権は大本の制作者である\"bobcat\"に帰属するものとします。\n\n・R-18・R-18Gへの利用について\n特に規制は設けていません。此処の判断にお任せします。\n\n・禁止事項\n当モデルのモデルデータ・テクスチャデータの再配布・販売は\n改変データを含めて禁止します。\n政治、宗教活動、特定個人や団体への誹謗中傷目的での使用も禁止します。\n禁止事項が発覚した場合、当モデルの販売停止の可能性があります。\n\n・トラブルについて\n当モデルを使用したことによる\n金銭・機器・機会等のトラブルによる損失に対し、\nbobcatは一切の責任を負わないものとします。\n\n不明な点や不具合等ございましたらご連絡下さい。\n\n更新履歴\n2019/03/07 : ver1.00 : リリース開始","url":"https://booth.pm/ja/items/1264528","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/9ce17800-a401-475b-8bd9-4309a7f6dc4b/i/1264528/78c14e10-2b8d-4fe1-af5c-c0c5f14e863d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="c4rUWBjy4doZ04mYF6ek8oY1aQ9hahkpopHwXNBsN4E="></script>
+    nonce="+48T/Fjp8LzijOZLbno0yCGDFrnMVreBXuERZLYPERE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
